# Jonasamar_PartageCpp

Matrices/: .gitignore  CMakeLists.txt  Matrice.cpp  Matrice.h  Matrix.cpp  Matrix.h  Matrix_creux.cpp  Matrix_creux.h  main.cpp  question2.cpp  question2.h  question3.cpp  question3.h  question4.cpp  question4.h  tests_class.cpp  tests_class.h  tests_q1.cpp  tests_q1.h  trace_T.py
Matrices/.ipynb_checkpoints/: trace_T-checkpoint.py
Matrices/data/: D_cst_Euler_explicite.txt  D_cst_Euler_implicite.txt  D_rdm_Euler_explicite.txt  D_rdm_Euler_implicite.txt  cst_test1_Euler_explicite.txt  cst_test1_Euler_implicite.txt  cst_test2_Euler_explicite.txt  cst_test3_Euler_explicite.txt  cst_test4_Euler_explicite.txt  cst_test5_Euler_explicite.txt  cst_test6_Euler_explicite.txt  data_cst_Euler_explicite.txt  data_cst_Euler_implicite.txt  data_cst_tf=1s_Euler_explicite.txt  rd_test1_Euler_explicite.txt  rd_test1_Euler_implicite.txt  test.txt  test2.txt  test3  test4.txt  test5.txt  test6.txt  test8.txt
Matrices/matrices_test/: 5.2*A.txt  A*B.txt  A+B.txt  A-B.txt  A.T.txt  A.txt  A^10.txt  B.txt  Trace(A).txt  Untitled.ipynb  norme(C).txt
calculatrice/: .gitignore  cal_polo.cpp
snake/: CMakeCache.txt  CMakeLists.txt  affichage.cpp  init_background.h  init_game.cpp  keyboard.cpp  main.cpp  move_down.cpp  move_right.cpp  move_right.h  place_point_background.h  place_point_serpent.h  place_serpent.cpp  place_serpent.h
snake/.h/: affichage.h  keyboard.h  move_left.h  serpent.h
snake/cpp/: init_background.cpp  move_left.cpp  move_up.cpp  place_point_background.cpp  serpent.cpp  (+1 more)
(+5 files in other folders)
